<resources>
    <string name="forecasted_min_max_temperature_template">%.1f/%.1f%s</string>
    <string name="forecasted_one_value_temperature_template">%.1f%s</string>
    <string name="app_name">Weather</string>
    <string name="search">search</string>
    <string name="search_city">Search for a city</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="send_feedback">Send feedback</string>
    <string name="weather">Weather</string>
    <string name="ambient_temperature">Ambient temperature:</string>
    <string name="ambient_humidity">Ambient humidity:</string>
    <string name="celsius">%.1f\u2103</string>
    <string name="fahrenheit">%.1f\u2109</string>
    <string name="service_description">This service is essential to provide weather updates</string>
    <string name="nothing_found">Nothing found!</string>
    <string name="temp_units_setting_question">What weather temperature units do you prefer?</string>
    <string name="current_weather">Current weather</string>
    <string name="data_receiving_time">Data as of:</string>
    <string name="update_time">Updated:</string>
    <string name="temperature">Temperature</string>
    <string name="searching_for_cities">Searching for cities…</string>
    <string name="empty_list_view">@string/searching_for_cities</string>
    <string name="waiting_for_data">Waiting for data…</string>
    <string name="not_applicable">N/A</string>
    <string name="about_positive">Assimilated</string>
    <string name="about_title">About</string>
    <string name="about_message">Created by wheelman1995\nVersion: %s</string>
    <string name="voice_prompt">speak in english</string>
    <string name="tab_today_title">now</string>
    <string name="tab_five_days">5 days</string>
    <string name="location_permission_denied_warning">You will not be able to automatically receive weather for your location until you manually grant the location permission!</string>
    <string name="location_permission_rationale">Please, grant this permission if you want to automatically receive weather for your location.</string>
    <string name="location_permission_rationale_positive_button">Close</string>
    <string name="location_permission_warning_positive_button">@string/location_permission_rationale_positive_button</string>
    <string name="rationale_title">Attention!</string>
    <string name="permission_denied_warning_title">Warning!</string>
    <string name="degree_symbol">\u00b0</string>
    <string name="feedback_hint_subject">Subject</string>
    <string name="feedback_hint_message_body">Message body</string>
    <string name="feedback_button_send_text">Send</string>
    <string name="forecast_fragment_today">Today</string>
    <string name="city_and_country">%s, %s</string>
    <string name="location_symbol">\u2316</string>
    <string name="no_internet">No internet connection available!</string>

    <string-array name="temp_setting_values">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

</resources>
