<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback_hint_subject" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:minHeight="150dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_message_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:hint="@string/feedback_hint_message_body"
            android:minHeight="150dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_send"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="@string/feedback_button_send_text"
        android:textSize="12sp"
        app:icon="@drawable/icon_send"
        app:iconGravity="start"
        app:iconPadding="3dp"
        app:iconSize="20dp" />

</androidx.appcompat.widget.LinearLayoutCompat>